--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 	<center>
 		<h1>Project Open Book</h1>
 	</center>
-	<p>
-		Api Route starts with /api/[....]
-	</p>
+	<div class="contain">
+		<p>The Api routes start with /api/[options..]</p>
+	</div>
 </body>
 
 </html>
