--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<h1>Project Open Book</h1>
 	</center>
 	<div class="contain">
-		<p>The Api routes start with /api/[options..]</p>
+			<p>The Api routes start with /api/things/{positive integer}</p>
 	</div>
 </body>
 
